YUR-97: fixed PR comments